Fixed the container overflow after a lot of tasks.

--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,13 @@ html {
 #container {
     background-color: white;
     width: 470px;
-    height: 570px;
+    max-height: 90vh; 
+    min-height: 90vh;
+    overflow-y: auto; 
     border-radius: 20px;
     padding: 15px 20px;
     font-family: 'Roboto', sans-serif;
+    box-shadow: 0px 0px 20px 30px rgba(0, 0, 0, 0.05);
 }
 
 h1 {
